--- a/OldRegularMessageDividers.css
+++ b/OldRegularMessageDividers.css
@@ -16,19 +16,19 @@
 }
 
 .group-spacing-4 .groupStart-23k01U::before {
-    top: calc(-.15625rem - 1px); /*.3125*/
+    top: calc(-.15625rem - 1px);
 }
 
 .group-spacing-8 .groupStart-23k01U::before {
-    top: calc(-.28125rem - 1px); /*.5625*/
+    top: calc(-.28125rem - 1px);
 }
 
 .group-spacing-16 .groupStart-23k01U::before {
-    top: calc(-.53125rem - 1px); /*1.0625*/
+    top: calc(-.53125rem - 1px);
 }
 
 .group-spacing-24 .groupStart-23k01U::before {
-    top: calc(-.78125rem - 1px); /*1.5625*/
+    top: calc(-.78125rem - 1px);
 }
 
 .hasMore-3e72_v + .groupStart-23k01U::before,
