--- a/OldRegularMessageDividers.css
+++ b/OldRegularMessageDividers.css
@@ -2,7 +2,7 @@
     position: relative;
 }
 
-.groupStart-23k01U::before {
+.groupStart-23k01U::after {
     position: absolute;
     left: 1rem;
     right: .875rem;
@@ -11,30 +11,30 @@
     background-color: var(--background-modifier-accent);
 }
 
-.group-spacing-0 .groupStart-23k01U::before {
+.group-spacing-0 .groupStart-23k01U::after {
     top: -1px;
 }
 
-.group-spacing-4 .groupStart-23k01U::before {
+.group-spacing-4 .groupStart-23k01U::after {
     top: calc(-.15625rem - 1px);
 }
 
-.group-spacing-8 .groupStart-23k01U::before {
+.group-spacing-8 .groupStart-23k01U::after {
     top: calc(-.28125rem - 1px);
 }
 
-.group-spacing-16 .groupStart-23k01U::before {
+.group-spacing-16 .groupStart-23k01U::after {
     top: calc(-.53125rem - 1px);
 }
 
-.group-spacing-24 .groupStart-23k01U::before {
+.group-spacing-24 .groupStart-23k01U::after {
     top: calc(-.78125rem - 1px);
 }
 
-.hasMore-3e72_v + .groupStart-23k01U::before,
-.base-34jWEe + .groupStart-23k01U::before,
-.welcomeMessage-3_Mcht + .groupStart-23k01U::before,
-.divider-JfaTT5 + .groupStart-23k01U::before,
-.expanded-13sWhZ .groupStart-23k01U:nth-child(2)::before {
+.hasMore-3e72_v + .groupStart-23k01U::after,
+.base-34jWEe + .groupStart-23k01U::after,
+.welcomeMessage-3_Mcht + .groupStart-23k01U::after,
+.divider-JfaTT5 + .groupStart-23k01U::after,
+.expanded-13sWhZ .groupStart-23k01U:nth-child(2)::after {
     display: none;
 }
